Add login and signup pages and configure react-email project

--- a/frontend/src/infrastructure/i18n/locales/en.json
+++ b/frontend/src/infrastructure/i18n/locales/en.json
@@ -1,2 +1,34 @@
 {
+  "commonFieldLabels.email": "Email",
+  "fileInput.dragAndDropMessage": "Drag & drop files here to upload",
+  "forgotPasswordModal.emailFieldLabel": "Email",
+  "forgotPasswordModal.submitButtonText": "Send password reset link",
+  "loginPage.emailFieldLabel": "Email",
+  "loginPage.forgotPasswordModalHeader": "Forgot password",
+  "loginPage.forgotPasswordText": "Forgot password?",
+  "loginPage.loginButtonText": "Continue",
+  "loginPage.passwordFieldLabel": "Password",
+  "loginPage.signUpText1": "Not a customer yet?",
+  "loginPage.signUpText2": "Click here to sign up.",
+  "loginPage.title": "Sign in",
+  "signUpPage.continueButtonText": "Continue",
+  "signUpPage.emailFieldLabel": "Email",
+  "signUpPage.loginText": "Already a customer?",
+  "signUpPage.stepOneSubtitle": "Enter your email address to continue",
+  "signUpPage.title": "Sign up",
+  "validations.alpha": "{label} must only contain letters.",
+  "validations.between": "{label} must be between {min} and {max}.",
+  "validations.decimal": "{label} must be a decimal number.",
+  "validations.email": "{label} must be a valid email address.",
+  "validations.maxDate": "{label} must be before {value}.",
+  "validations.maxLength": "{label} must be no longer than {max} characters.",
+  "validations.maxValue": "{label} must be less than or equal to {max}.",
+  "validations.minDate": "{label} must be after {value}.",
+  "validations.minLength": "{label} must be at least {min} characters long.",
+  "validations.minValue": "{label} must be greater than or equal to {min}.",
+  "validations.numeric": "{label} must be a number.",
+  "validations.phoneNumber": "{label} must be a valid phone number",
+  "validations.required": "{label} is required.",
+  "validations.sameAs": "{label} must be the same as {otherName}.",
+  "signUpPage.loginText2": "Click here to sign in."
 }
