--- a/frontend/src/infrastructure/i18n/locales/nl.json
+++ b/frontend/src/infrastructure/i18n/locales/nl.json
@@ -1,2 +1,31 @@
 {
+  "fileInput.dragAndDropMessage": "Drag & drop hier bestanden om ze te uploaden",
+  "validations.alpha": "{label} mag alleen letters bevatten.",
+  "validations.between": "{label} moet tussen {min} en {max} liggen.",
+  "validations.decimal": "{label} moet een decimaal getal zijn.",
+  "validations.email": "{label} moet een geldig e-mailadres zijn.",
+  "validations.maxDate": "{label} moet vóór {value} staan.",
+  "validations.maxLength": "{label} mag niet langer zijn dan {max} tekens.",
+  "validations.maxValue": "{label} moet kleiner zijn dan of gelijk zijn aan {max}.",
+  "validations.minDate": "{label} moet na {value} staan.",
+  "validations.minLength": "{label} moet minimaal {min} tekens lang zijn.",
+  "validations.minValue": "{label} moet groter zijn dan of gelijk zijn aan {min}.",
+  "validations.numeric": "{label} moet een getal zijn.",
+  "validations.required": "{label} is een verplicht veld.",
+  "validations.sameAs": "{label} moet hetzelfde zijn als {otherName}.",
+  "loginPage.title": "Inloggen",
+  "loginPage.emailFieldLabel": "E-mailadres",
+  "loginPage.passwordFieldLabel": "Wachtwoord",
+  "loginPage.forgotPasswordText": "Wachtwoord vergeten?",
+  "loginPage.loginButtonText": "Doorgaan",
+  "signUpPage.title": "Registreren",
+  "signUpPage.stepOneSubtitle": "Voer uw e-mailadres in om door te gaan",
+  "signUpPage.loginText": "Reeds klant?",
+  "signUpPage.emailFieldLabel": "E-mailadres",
+  "signUpPage.continueButtonText": "Doorgaan",
+  "commonFieldLabels.email": "E-mailadres",
+  "forgotPasswordModal.submitButtonText": "Verstuur wachtwoord reset link",
+  "loginPage.signUpText": "Nog geen klant? \nKlik hier om u aan te melden.",
+  "loginPage.signUpText2": "Klik hier om te registeren.",
+  "signUpPage.loginText2": "Klik hier om in te loggen."
 }
