Implement new features and fix bugs
This commit includes modifications to the following files:
- frontend/package.json
- frontend/pnpm-lock.yaml
- frontend/src/features/dashboard/DashboardView.vue
- frontend/src/features/dashboard/header/DashboardAsideNavigation.vue
- frontend/src/features/dashboard/header/DashboardAsideNavigationItem.vue
- frontend/src/features/dashboard/header/DashboardAsideNavigationItems.vue
- frontend/src/features/dashboard/header/DashboardHeader.vue
- frontend/src/features/dashboard/header/UserAccountMenu.vue
- frontend/src/features/dashboard/header/composables/sidebar.ts
- frontend/src/features/dashboard/header/types.ts
- frontend/src/features/employees/time/ClockHoursModal.vue
- frontend/src/features/employees/time/TimeView.vue
- frontend/src/features/manager/time/TimeView.vue
- frontend/src/features/manager/time/validate/ValidateHoursView.vue
- frontend/src/features/shared/formfields/FormInputTypes.ts
- frontend/src/features/shared/formfields/formInputs.ts
- frontend/src/features/shared/formfields/wrappers/DatePicker.vue
- frontend/src/features/shared/formfields/wrappers/InputMask.vue
- frontend/src/features/shared/formfields/wrappers/TimeInput.vue
- frontend/src/features/shared/transitions/ScaleInTransition.vue
- frontend/src/features/users/accounts/queries/meQuery.ts
- frontend/src/infrastructure/authorization/permissionStore.ts
- frontend/src/infrastructure/authorization/permissions.ts
- frontend/src/infrastructure/i18n/locales/en.json
- frontend/src/infrastructure/i18n/locales/nl.json
- frontend/src/infrastructure/layouts/AppLayout/AppLayout.vue
- frontend/src/infrastructure/plugins/primevue/presets/CustomAura/datepicker/index.js
- frontend/src/infrastructure/plugins/primevue/presets/CustomAura/dialog/index.js
- frontend/src/infrastructure/plugins/primevue/presets/CustomAura/iconfield/index.js
- frontend/src/infrastructure/plugins/primevue/presets/CustomAura/inputtext/index.js
- frontend/src/infrastructure/plugins/primevue/presets/Custo

--- a/frontend/src/infrastructure/i18n/locales/en.json
+++ b/frontend/src/infrastructure/i18n/locales/en.json
@@ -1,21 +1,52 @@
 {
   "commonFieldLabels.email": "Email",
+  "confirmEmailPage.errorMessage": "Something went wrong while confirming your email. Please contact our support team.",
+  "confirmEmailPage.loginText": "Go to login page",
+  "confirmEmailPage.successMessage": "Your email has been confirmed succesfully, you can now log in.",
+  "confirmEmailPage.title": "Confirm email",
+  "dashboardAsideNavigation.employeesTitle": "Employees",
+  "dashboardHeader.search": "Search...",
+  "employeesNavigationItem.hours": "Hours",
+  "error": "Error",
+  "errors.email-not-confirmed": "Email has not been confirmed yet, please check your inbox.",
+  "errors.email-not-confirmed.resend-email": "Resend confirmation email",
+  "errors.login-failed": "Login failed, check your email address and/or password",
+  "errors.unauthorized": "You do not have permission to access this page.",
   "fileInput.dragAndDropMessage": "Drag & drop files here to upload",
   "forgotPasswordModal.emailFieldLabel": "Email",
+  "forgotPasswordModal.emailNotSentError": "Something went wrong with sending your password reset email. Please try again later or contact our support team.",
+  "forgotPasswordModal.emailSent": "A password reset email has been sent to the given email address, please check your inbox.",
   "forgotPasswordModal.submitButtonText": "Send password reset link",
+  "loginPage.emailConfirmationNotSent": "There was an issue with resending the confirmation email. Please try again later or contact our support team.",
+  "loginPage.emailConfirmationSent": "Email confirmation has been resent. Please check your inbox.",
   "loginPage.emailFieldLabel": "Email",
   "loginPage.forgotPasswordModalHeader": "Forgot password",
   "loginPage.forgotPasswordText": "Forgot password?",
   "loginPage.loginButtonText": "Continue",
+  "loginPage.loginError": "Login failed, check the email and/or password.",
+  "loginPage.loginSuccess": "Login successful, you will be redirected to the homepage.",
   "loginPage.passwordFieldLabel": "Password",
   "loginPage.signUpText1": "Not a customer yet?",
   "loginPage.signUpText2": "Click here to sign up.",
   "loginPage.title": "Sign in",
+  "sidebarNavigation.dashboard": "Dashboard",
+  "sidebarNavigation.employees": "Employees",
+  "sidebarNavigation.employees.clockHours": "Clock hours",
+  "sidebarNavigation.manager": "Manager",
+  "sidebarNavigation.manager.time": "Time",
+  "sidebarNavigation.manager.validateHours": "Validate hours",
   "signUpPage.continueButtonText": "Continue",
   "signUpPage.emailFieldLabel": "Email",
   "signUpPage.loginText": "Already a customer?",
+  "signUpPage.loginText2": "Click here to sign in.",
   "signUpPage.stepOneSubtitle": "Enter your email address to continue",
   "signUpPage.title": "Sign up",
+  "success": "Success",
+  "userAccountMenu.logoutErrorMessage": "Something went wrong while trying to log you out. Please try again later or contact our support team.",
+  "userAccountMenu.logoutSuccessMessage": "Logout successful, you will be rerouted to the login page.",
+  "userAccountMenu.logoutTitle": "Logout",
+  "userAccountMenu.profileTitle": "Profile",
+  "userAccountMenu.settingsTitle": "Settings",
   "validations.alpha": "{label} must only contain letters.",
   "validations.between": "{label} must be between {min} and {max}.",
   "validations.decimal": "{label} must be a decimal number.",
@@ -30,28 +61,15 @@
   "validations.phoneNumber": "{label} must be a valid phone number",
   "validations.required": "{label} is required.",
   "validations.sameAs": "{label} must be the same as {otherName}.",
-  "signUpPage.loginText2": "Click here to sign in.",
-  "success": "Success",
-  "error": "Error",
-  "forgotPasswordModal.emailSent": "A password reset email has been sent to the given email address, please check your inbox.",
-  "forgotPasswordModal.emailNotSentError": "Something went wrong with sending your password reset email. Please try again later or contact our support team.",
-  "loginPage.loginSuccess": "Login successful, you will be redirected to the homepage.",
-  "loginPage.loginError": "Login failed, check the email and/or password.",
-  "errors.email-not-confirmed": "Email has not been confirmed yet, please check your inbox.",
-  "errors.login-failed": "Login failed, check your email address and/or password",
-  "errors.email-not-confirmed.resend-email": "Resend confirmation email",
-  "loginPage.emailConfirmationSent": "Email confirmation has been resent. Please check your inbox.",
-  "loginPage.emailConfirmationNotSent": "There was an issue with resending the confirmation email. Please try again later or contact our support team.",
-  "confirmEmailPage.title": "Confirm email",
-  "confirmEmailPage.successMessage": "Your email has been confirmed succesfully, you can now log in.",
-  "confirmEmailPage.errorMessage": "Something went wrong while confirming your email. Please contact our support team.",
-  "confirmEmailPage.loginText": "Go to login page",
-  "dashboardHeader.search": "Search...",
-  "userAccountMenu.settingsTitle": "Settings",
-  "userAccountMenu.logoutTitle": "Logout",
-  "userAccountMenu.profileTitle": "Profile",
-  "userAccountMenu.logoutSuccessMessage": "Logout successful, you will be rerouted to the login page.",
-  "userAccountMenu.logoutErrorMessage": "Something went wrong while trying to log you out. Please try again later or contact our support team.",
-  "dashboardAsideNavigation.employeesTitle": "Employees",
-  "employeesNavigationItem.hours": "Hours"
+  "validations.time": "{label} must be a valid time.",
+  "clockHoursModal.breakTimeExceedsWorkedTime": "Break time can not be longer than worked hours",
+  "clockHoursModal.breakTimeNegative": "Break time can not be less than 0.",
+  "clockHoursModal.dateLabel": "Shift date",
+  "clockHoursModal.startTimeLabel": "Start time",
+  "clockHoursModal.endTimeLabel": "End time",
+  "clockHoursModal.breakTimeLabel": "Break time",
+  "watchOut": "Watch out!",
+  "clockHoursModal.afterMidnightWarning": "It is currently after midnight, the start date of your shift could differ from the current date.",
+  "clockHoursModal.startedBeforeMidnight": "I started before midnight",
+  "clockHoursModal.title": "Clock hours"
 }
