--- a/frontend/src/infrastructure/i18n/locales/nl.json
+++ b/frontend/src/infrastructure/i18n/locales/nl.json
@@ -1,5 +1,48 @@
 {
+  "commonFieldLabels.email": "E-mailadres",
+  "confirmEmailPage.errorMessage": "Er is iets misgegaan bij het bevestigen van uw e-mailadres. \nNeem contact op met ons ondersteuningsteam.",
+  "confirmEmailPage.loginText": "Ga naar de inlogpagina",
+  "confirmEmailPage.successMessage": "Je e-mailadres is succesvol bevestigd, je kunt nu inloggen.",
+  "confirmEmailPage.title": "Bevestig Email",
+  "dashboardAsideNavigation.employeesTitle": "Medewerkers",
+  "employeesNavigationItem.hours": "Uren",
+  "error": "Error",
+  "errors.email-not-confirmed": "E-mail is nog niet bevestigd, controleer uw inbox.",
+  "errors.login-failed": "Inloggen mislukt, controleer uw e-mailadres en/of wachtwoord",
+  "errors.unauthorized": "U heeft geen toestemming om deze pagina te bezoeken.",
   "fileInput.dragAndDropMessage": "Drag & drop hier bestanden om ze te uploaden",
+  "forgotPasswordModal.emailFieldLabel": "E-mail",
+  "forgotPasswordModal.emailNotSentError": "Er is iets misgegaan bij het verzenden van uw e-mail voor het opnieuw instellen van uw wachtwoord. \nProbeer het later opnieuw of neem contact op met ons ondersteuningsteam.",
+  "forgotPasswordModal.emailSent": "Er is een e-mail voor het opnieuw instellen van het wachtwoord naar het opgegeven e-mailadres verzonden. Controleer uw inbox.",
+  "forgotPasswordModal.submitButtonText": "Verstuur wachtwoord reset link",
+  "loginPage.emailConfirmationNotSent": "Er is een probleem opgetreden bij het opnieuw verzenden van de bevestigingsmail. \nProbeer het later opnieuw of neem contact op met ons ondersteuningsteam.",
+  "loginPage.emailConfirmationSent": "Er is een e-mailbevestiging opnieuw verzonden. \nControleer uw inbox.",
+  "loginPage.emailFieldLabel": "E-mailadres",
+  "loginPage.forgotPasswordModalHeader": "Wachtwoord vergeten",
+  "loginPage.forgotPasswordText": "Wachtwoord vergeten?",
+  "loginPage.loginButtonText": "Doorgaan",
+  "loginPage.loginError": "Inloggen mislukt, controleer het e-mailadres en/of wachtwoord.",
+  "loginPage.loginSuccess": "Inloggen succesvol, u wordt doorgestuurd naar de homepage.",
+  "loginPage.passwordFieldLabel": "Wachtwoord",
+  "loginPage.signUpText1": "Nog geen klant?",
+  "loginPage.signUpText2": "Klik hier om te registeren.",
+  "loginPage.title": "Inloggen",
+  "sidebarNavigation.dashboard": "Dashboard",
+  "sidebarNavigation.employees": "Medewerkers",
+  "sidebarNavigation.employees.clockHours": "Uren klokken",
+  "sidebarNavigation.manager": "Manager",
+  "sidebarNavigation.manager.time": "Tijd",
+  "sidebarNavigation.manager.validateHours": "Uren goedkeuren",
+  "signUpPage.continueButtonText": "Doorgaan",
+  "signUpPage.emailFieldLabel": "E-mailadres",
+  "signUpPage.loginText": "Reeds klant?",
+  "signUpPage.loginText2": "Klik hier om in te loggen.",
+  "signUpPage.stepOneSubtitle": "Voer uw e-mailadres in om door te gaan",
+  "signUpPage.title": "Registreren",
+  "success": "Succes",
+  "userAccountMenu.logoutTitle": "Uitloggen",
+  "userAccountMenu.profileTitle": "Profiel",
+  "userAccountMenu.settingsTitle": "Instellingen",
   "validations.alpha": "{label} mag alleen letters bevatten.",
   "validations.between": "{label} moet tussen {min} en {max} liggen.",
   "validations.decimal": "{label} moet een decimaal getal zijn.",
@@ -11,43 +54,18 @@
   "validations.minLength": "{label} moet minimaal {min} tekens lang zijn.",
   "validations.minValue": "{label} moet groter zijn dan of gelijk zijn aan {min}.",
   "validations.numeric": "{label} moet een getal zijn.",
+  "validations.phoneNumber": "{label} moet een geldig telefoonnummer zijn",
   "validations.required": "{label} is een verplicht veld.",
   "validations.sameAs": "{label} moet hetzelfde zijn als {otherName}.",
-  "loginPage.title": "Inloggen",
-  "loginPage.emailFieldLabel": "E-mailadres",
-  "loginPage.passwordFieldLabel": "Wachtwoord",
-  "loginPage.forgotPasswordText": "Wachtwoord vergeten?",
-  "loginPage.loginButtonText": "Doorgaan",
-  "signUpPage.title": "Registreren",
-  "signUpPage.stepOneSubtitle": "Voer uw e-mailadres in om door te gaan",
-  "signUpPage.loginText": "Reeds klant?",
-  "signUpPage.emailFieldLabel": "E-mailadres",
-  "signUpPage.continueButtonText": "Doorgaan",
-  "commonFieldLabels.email": "E-mailadres",
-  "forgotPasswordModal.submitButtonText": "Verstuur wachtwoord reset link",
-  "loginPage.signUpText2": "Klik hier om te registeren.",
-  "signUpPage.loginText2": "Klik hier om in te loggen.",
-  "error": "Error",
-  "success": "Succes",
-  "forgotPasswordModal.emailSent": "Er is een e-mail voor het opnieuw instellen van het wachtwoord naar het opgegeven e-mailadres verzonden. Controleer uw inbox.",
-  "forgotPasswordModal.emailNotSentError": "Er is iets misgegaan bij het verzenden van uw e-mail voor het opnieuw instellen van uw wachtwoord. \nProbeer het later opnieuw of neem contact op met ons ondersteuningsteam.",
-  "loginPage.loginSuccess": "Inloggen succesvol, u wordt doorgestuurd naar de homepage.",
-  "loginPage.loginError": "Inloggen mislukt, controleer het e-mailadres en/of wachtwoord.",
-  "errors.login-failed": "Inloggen mislukt, controleer uw e-mailadres en/of wachtwoord",
-  "errors.email-not-confirmed": "E-mail is nog niet bevestigd, controleer uw inbox.",
-  "forgotPasswordModal.emailFieldLabel": "E-mail",
-  "loginPage.forgotPasswordModalHeader": "Wachtwoord vergeten",
-  "loginPage.signUpText1": "Nog geen klant?",
-  "validations.phoneNumber": "{label} moet een geldig telefoonnummer zijn",
-  "loginPage.emailConfirmationNotSent": "Er is een probleem opgetreden bij het opnieuw verzenden van de bevestigingsmail. \nProbeer het later opnieuw of neem contact op met ons ondersteuningsteam.",
-  "loginPage.emailConfirmationSent": "Er is een e-mailbevestiging opnieuw verzonden. \nControleer uw inbox.",
-  "confirmEmailPage.title": "Bevestig Email",
-  "confirmEmailPage.successMessage": "Je e-mailadres is succesvol bevestigd, je kunt nu inloggen.",
-  "confirmEmailPage.errorMessage": "Er is iets misgegaan bij het bevestigen van uw e-mailadres. \nNeem contact op met ons ondersteuningsteam.",
-  "confirmEmailPage.loginText": "Ga naar de inlogpagina",
-  "userAccountMenu.logoutTitle": "Uitloggen",
-  "userAccountMenu.settingsTitle": "Instellingen",
-  "userAccountMenu.profileTitle": "Profiel",
-  "dashboardAsideNavigation.employeesTitle": "Medewerkers",
-  "employeesNavigationItem.hours": "Uren"
+  "validations.time": "{label} moet een geldige tijd zijn.",
+  "clockHoursModal.breakTimeExceedsWorkedTime": "Pauze kan niet langer zijn dan de gewerkte uren",
+  "clockHoursModal.breakTimeNegative": "Pauze tijd kan niet minder dan 0 zijn.",
+  "clockHoursModal.dateLabel": "Shift datum",
+  "clockHoursModal.startTimeLabel": "Starttijd",
+  "clockHoursModal.endTimeLabel": "Eindtijd",
+  "clockHoursModal.breakTimeLabel": "Pauzetijd",
+  "clockHoursModal.afterMidnightWarning": "Het is momenteel na middernacht, de startdatum van jouw dienst kan afwijken van de huidige datum.",
+  "watchOut": "Let op!",
+  "clockHoursModal.startedBeforeMidnight": "Ik begon vóór middernacht",
+  "clockHoursModal.title": "Uren klokken"
 }
